# club_de_programmation

./: Demo1.docx  f_class.py  heart01.py  inverse.py  jupy.py  li_doc.py  programme_de_travail_vendredi_18mars.txt  squares.py  ytinstaller.py
files/: Liste_des_eleves_du_club_de_programmation.txt  Plan_de_travail_5Juillet.txt  f_class_wip.py  presentation_vecteur_et_devoir.docx
functions&/: Turtle_work.py  bay_note.py  done.csv  done_pou_li.tsv  essay.py  f_class_wip.py  fibo.py  file.txt  get_roots.py  graph_function.py  integrale2.py  li_dokiman.py  make_call.py  pong_game.py  power.py  second_site_example.py  site_example.py  systeme_mecanique.py
main_folder/: climate_change.txt  climate_change_fr.txt  debby.txt  doc.txt  id.py  traducteur.py  ytinstaller.py
students_works/: Christie.py  Debby.py  Heart.py  anny.json  anny.py  christie.py  heart01.py  ira.py  ira_flory.py  kenderlie.py  palace.py  steph and flory.py  stephen.py
