[tool.poetry]
name = "Club Projects"
version = "1.0.0"
description = "Multiple junior project"
authors = ["Dede Assann <dedeassann20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.51.0"
google-auth-oauthlib = "^0.5.2"
google-auth-httplib2 = "^0.1.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.961"
pylint = "^2.14.3"
pytest = "^7.1.2"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"
kivy = "^1.9.0"
pygame = "2.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
